// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script defer="defer"
            src="main.js"
    >
    </script>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,5 +17,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.snqh4ez,html.snqh4ez body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="fkgxba0 _1wxfcta18 _1wxfcta1b">
+        <div class="_54r4c40 snqh4e76 snqh4e66 snqh4e96 snqh4e86 snqh4e5a _1wxfcta18 _1wxfcta1b snqh4e32 snqh4e35">
+          <span class="_54r4c40 snqh4e4u _1wxfcta0 _1wxfcta1 _1wxfcta21 _1d0g9qk4 _1wxfctad">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._54r4c40 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] ._54r4c40 {
  outline: none;
}
._54r4c41 {
  display: block;
}
._54r4c42 {
  line-height: 1;
}
._54r4c43 {
  list-style: none;
}
._54r4c44 {
  quotes: none;
}
._54r4c44:after,
._54r4c44:before {
  content: "";
}
._54r4c45 {
  border-collapse: collapse;
  border-spacing: 0;
}
._54r4c46 {
  -webkit-appearance: none;
  appearance: none;
}
._54r4c47 {
  background-color: transparent;
}
._54r4c49 {
  color: inherit;
}
._54r4c4a:disabled {
  opacity: 1;
}
._54r4c4a::-ms-expand,
._54r4c4c::-ms-clear {
  display: none;
}
._54r4c4c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._54r4c4f {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
.snqh4e0 {
  overflow: hidden;
}
.snqh4e1 {
  overflow: scroll;
}
.snqh4e2 {
  overflow: visible;
}
.snqh4e3 {
  overflow: auto;
}
.snqh4e4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.snqh4e5 {
  outline: none;
}
.snqh4e6 {
  opacity: 0;
}
.snqh4e7 {
  z-index: 0;
}
.snqh4e8 {
  z-index: 1;
}
.snqh4e9 {
  z-index: 2;
}
.snqh4ea {
  z-index: 90;
}
.snqh4eb {
  z-index: 100;
}
.snqh4ec {
  z-index: 200;
}
.snqh4ed {
  z-index: 290;
}
.snqh4ee {
  z-index: 300;
}
.snqh4ef {
  z-index: 400;
}
.snqh4eg {
  cursor: default;
}
.snqh4eh {
  cursor: pointer;
}
.snqh4ei {
  pointer-events: none;
}
.snqh4ej {
  top: 0;
}
.snqh4ek {
  bottom: 0;
}
.snqh4el {
  left: 0;
}
.snqh4em {
  right: 0;
}
.snqh4en {
  height: 100%;
}
.snqh4eo {
  height: var(--yf9sr18);
}
.snqh4ep {
  width: 100%;
}
.snqh4eq {
  width: var(--yf9sr18);
}
.snqh4er {
  min-width: 0;
}
.snqh4es {
  max-width: var(--yf9sr1z);
}
.snqh4et {
  max-width: var(--yf9sr110);
}
.snqh4eu {
  max-width: var(--yf9sr111);
}
.snqh4ev {
  max-width: var(--yf9sr112);
}
.snqh4ew {
  transition: var(--yf9sr15f);
}
.snqh4ex {
  transition: var(--yf9sr15g);
}
.snqh4ey:active {
  transform: var(--yf9sr15h);
}
html.snqh4ez .snqh4e11,
html:not(.snqh4ez) .snqh4e10 {
  background: var(--yf9sr11r);
}
html.snqh4ez .snqh4e13,
html:not(.snqh4ez) .snqh4e12 {
  background: var(--yf9sr11s);
}
html.snqh4ez .snqh4e15,
html:not(.snqh4ez) .snqh4e14 {
  background: var(--yf9sr11t);
}
html.snqh4ez .snqh4e17,
html:not(.snqh4ez) .snqh4e16 {
  background: var(--yf9sr11u);
}
html.snqh4ez .snqh4e19,
html:not(.snqh4ez) .snqh4e18 {
  background: var(--yf9sr11v);
}
html.snqh4ez .snqh4e1b,
html:not(.snqh4ez) .snqh4e1a {
  background: var(--yf9sr11w);
}
html.snqh4ez .snqh4e1d,
html:not(.snqh4ez) .snqh4e1c {
  background: var(--yf9sr11x);
}
html.snqh4ez .snqh4e1f,
html:not(.snqh4ez) .snqh4e1e {
  background: var(--yf9sr11y);
}
html.snqh4ez .snqh4e1h,
html:not(.snqh4ez) .snqh4e1g {
  background: var(--yf9sr11z);
}
html.snqh4ez .snqh4e1j,
html:not(.snqh4ez) .snqh4e1i {
  background: var(--yf9sr120);
}
html.snqh4ez .snqh4e1l,
html:not(.snqh4ez) .snqh4e1k {
  background: var(--yf9sr121);
}
html.snqh4ez .snqh4e1n,
html:not(.snqh4ez) .snqh4e1m {
  background: var(--yf9sr122);
}
html.snqh4ez .snqh4e1p,
html:not(.snqh4ez) .snqh4e1o {
  background: var(--yf9sr123);
}
html.snqh4ez .snqh4e1r,
html:not(.snqh4ez) .snqh4e1q {
  background: var(--yf9sr124);
}
html.snqh4ez .snqh4e1t,
html:not(.snqh4ez) .snqh4e1s {
  background: var(--yf9sr125);
}
html.snqh4ez .snqh4e1v,
html:not(.snqh4ez) .snqh4e1u {
  background: var(--yf9sr126);
}
html.snqh4ez .snqh4e1x,
html:not(.snqh4ez) .snqh4e1w {
  background: var(--yf9sr127);
}
html.snqh4ez .snqh4e1z,
html:not(.snqh4ez) .snqh4e1y {
  background: var(--yf9sr128);
}
html.snqh4ez .snqh4e21,
html:not(.snqh4ez) .snqh4e20 {
  background: var(--yf9sr129);
}
html.snqh4ez .snqh4e23,
html:not(.snqh4ez) .snqh4e22 {
  background: var(--yf9sr12a);
}
html.snqh4ez .snqh4e25,
html:not(.snqh4ez) .snqh4e24 {
  background: var(--yf9sr12b);
}
html.snqh4ez .snqh4e27,
html:not(.snqh4ez) .snqh4e26 {
  background: var(--yf9sr12c);
}
html.snqh4ez .snqh4e29,
html:not(.snqh4ez) .snqh4e28 {
  background: var(--yf9sr12d);
}
html.snqh4ez .snqh4e2b,
html:not(.snqh4ez) .snqh4e2a {
  background: var(--yf9sr12e);
}
html.snqh4ez .snqh4e2d,
html:not(.snqh4ez) .snqh4e2c {
  background: var(--yf9sr12f);
}
html.snqh4ez .snqh4e2f,
html:not(.snqh4ez) .snqh4e2e {
  background: var(--yf9sr12g);
}
html.snqh4ez .snqh4e2h,
html:not(.snqh4ez) .snqh4e2g {
  background: var(--yf9sr12h);
}
html.snqh4ez .snqh4e2j,
html:not(.snqh4ez) .snqh4e2i {
  background: var(--yf9sr12i);
}
html.snqh4ez .snqh4e2l,
html:not(.snqh4ez) .snqh4e2k {
  background: var(--yf9sr12j);
}
html.snqh4ez .snqh4e2n,
html:not(.snqh4ez) .snqh4e2m {
  background: var(--yf9sr12k);
}
html.snqh4ez .snqh4e2p,
html:not(.snqh4ez) .snqh4e2o {
  background: var(--yf9sr12l);
}
html.snqh4ez .snqh4e2r,
html:not(.snqh4ez) .snqh4e2q {
  background: var(--yf9sr12m);
}
html.snqh4ez .snqh4e2t,
html:not(.snqh4ez) .snqh4e2s {
  background: var(--yf9sr12n);
}
html.snqh4ez .snqh4e2v,
html:not(.snqh4ez) .snqh4e2u {
  background: var(--yf9sr12o);
}
html.snqh4ez .snqh4e2x,
html:not(.snqh4ez) .snqh4e2w {
  background: var(--yf9sr12p);
}
html.snqh4ez .snqh4e2z,
html:not(.snqh4ez) .snqh4e2y {
  background: var(--yf9sr12q);
}
html.snqh4ez .snqh4e31,
html:not(.snqh4ez) .snqh4e30 {
  background: var(--yf9sr12r);
}
html.snqh4ez .snqh4e33,
html:not(.snqh4ez) .snqh4e32 {
  background: var(--yf9sr12s);
}
html.snqh4ez .snqh4e35,
html:not(.snqh4ez) .snqh4e34 {
  background: var(--yf9sr12t);
}
html.snqh4ez .snqh4e37,
html:not(.snqh4ez) .snqh4e36 {
  box-shadow: var(--yf9sr15i);
}
html.snqh4ez .snqh4e39,
html:not(.snqh4ez) .snqh4e38 {
  box-shadow: var(--yf9sr15j);
}
html.snqh4ez .snqh4e3b,
html:not(.snqh4ez) .snqh4e3a {
  box-shadow: var(--yf9sr15k);
}
html.snqh4ez .snqh4e3d,
html:not(.snqh4ez) .snqh4e3c {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1d);
}
html.snqh4ez .snqh4e3f,
html:not(.snqh4ez) .snqh4e3e {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1e);
}
html.snqh4ez .snqh4e3h,
html:not(.snqh4ez) .snqh4e3g {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1f);
}
html.snqh4ez .snqh4e3j,
html:not(.snqh4ez) .snqh4e3i {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1g);
}
html.snqh4ez .snqh4e3l,
html:not(.snqh4ez) .snqh4e3k {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1h);
}
html.snqh4ez .snqh4e3n,
html:not(.snqh4ez) .snqh4e3m {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1h);
}
html.snqh4ez .snqh4e3p,
html:not(.snqh4ez) .snqh4e3o {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1i);
}
html.snqh4ez .snqh4e3r,
html:not(.snqh4ez) .snqh4e3q {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1i);
}
html.snqh4ez .snqh4e3t,
html:not(.snqh4ez) .snqh4e3s {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1j);
}
html.snqh4ez .snqh4e3v,
html:not(.snqh4ez) .snqh4e3u {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1l);
}
html.snqh4ez .snqh4e3x,
html:not(.snqh4ez) .snqh4e3w {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1l);
}
html.snqh4ez .snqh4e3z,
html:not(.snqh4ez) .snqh4e3y {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1m);
}
html.snqh4ez .snqh4e41,
html:not(.snqh4ez) .snqh4e40 {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1m);
}
html.snqh4ez .snqh4e43,
html:not(.snqh4ez) .snqh4e42 {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1n);
}
html.snqh4ez .snqh4e45,
html:not(.snqh4ez) .snqh4e44 {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1o);
}
html.snqh4ez .snqh4e47,
html:not(.snqh4ez) .snqh4e46 {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1p);
}
html.snqh4ez .snqh4e49,
html:not(.snqh4ez) .snqh4e48 {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1p);
}
html.snqh4ez .snqh4e4b,
html:not(.snqh4ez) .snqh4e4a {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1q);
}
html.snqh4ez .snqh4e4d,
html:not(.snqh4ez) .snqh4e4c {
  box-shadow: inset 0 0 0 var(--yf9sr1x) var(--yf9sr1q);
}
html.snqh4ez .snqh4e4f,
html:not(.snqh4ez) .snqh4e4e {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1r);
}
html.snqh4ez .snqh4e4h,
html:not(.snqh4ez) .snqh4e4g {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1s);
}
html.snqh4ez .snqh4e4j,
html:not(.snqh4ez) .snqh4e4i {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1t);
}
html.snqh4ez .snqh4e4l,
html:not(.snqh4ez) .snqh4e4k {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1u);
}
html.snqh4ez .snqh4e4n,
html:not(.snqh4ez) .snqh4e4m {
  box-shadow: inset 0 0 0 var(--yf9sr1w) var(--yf9sr1v);
}
html.snqh4ez .snqh4e4p,
html:not(.snqh4ez) .snqh4e4o {
  box-shadow: 0 0 0 var(--yf9sr1y) var(--yf9sr1k);
}
.snqh4e4q {
  display: none;
}
.snqh4e4u {
  display: block;
}
.snqh4e4y {
  display: inline;
}
.snqh4e52 {
  display: inline-block;
}
.snqh4e56 {
  display: flex;
}
.snqh4e5a {
  position: relative;
}
.snqh4e5e {
  position: absolute;
}
.snqh4e5i {
  position: fixed;
}
.snqh4e5m {
  border-radius: 0;
}
.snqh4e5q {
  border-radius: 9999px;
}
.snqh4e5u {
  border-radius: var(--yf9sr1a);
}
.snqh4e5y {
  border-radius: var(--yf9sr1b);
}
.snqh4e62 {
  border-radius: var(--yf9sr1c);
}
.snqh4e66 {
  padding-top: var(--yf9sr10);
}
.snqh4e6a {
  padding-top: var(--yf9sr11);
}
.snqh4e6e {
  padding-top: var(--yf9sr12);
}
.snqh4e6i {
  padding-top: var(--yf9sr13);
}
.snqh4e6m {
  padding-top: var(--yf9sr14);
}
.snqh4e6q {
  padding-top: var(--yf9sr15);
}
.snqh4e6u {
  padding-top: var(--yf9sr16);
}
.snqh4e6y {
  padding-top: var(--yf9sr17);
}
.snqh4e72 {
  padding-top: 0;
}
.snqh4e76 {
  padding-bottom: var(--yf9sr10);
}
.snqh4e7a {
  padding-bottom: var(--yf9sr11);
}
.snqh4e7e {
  padding-bottom: var(--yf9sr12);
}
.snqh4e7i {
  padding-bottom: var(--yf9sr13);
}
.snqh4e7m {
  padding-bottom: var(--yf9sr14);
}
.snqh4e7q {
  padding-bottom: var(--yf9sr15);
}
.snqh4e7u {
  padding-bottom: var(--yf9sr16);
}
.snqh4e7y {
  padding-bottom: var(--yf9sr17);
}
.snqh4e82 {
  padding-bottom: 0;
}
.snqh4e86 {
  padding-right: var(--yf9sr10);
}
.snqh4e8a {
  padding-right: var(--yf9sr11);
}
.snqh4e8e {
  padding-right: var(--yf9sr12);
}
.snqh4e8i {
  padding-right: var(--yf9sr13);
}
.snqh4e8m {
  padding-right: var(--yf9sr14);
}
.snqh4e8q {
  padding-right: var(--yf9sr15);
}
.snqh4e8u {
  padding-right: var(--yf9sr16);
}
.snqh4e8y {
  padding-right: var(--yf9sr17);
}
.snqh4e92 {
  padding-right: 0;
}
.snqh4e96 {
  padding-left: var(--yf9sr10);
}
.snqh4e9a {
  padding-left: var(--yf9sr11);
}
.snqh4e9e {
  padding-left: var(--yf9sr12);
}
.snqh4e9i {
  padding-left: var(--yf9sr13);
}
.snqh4e9m {
  padding-left: var(--yf9sr14);
}
.snqh4e9q {
  padding-left: var(--yf9sr15);
}
.snqh4e9u {
  padding-left: var(--yf9sr16);
}
.snqh4e9y {
  padding-left: var(--yf9sr17);
}
.snqh4ea2 {
  padding-left: 0;
}
.snqh4ea6 {
  margin-top: var(--yf9sr10);
}
.snqh4eaa {
  margin-top: var(--yf9sr11);
}
.snqh4eae {
  margin-top: var(--yf9sr12);
}
.snqh4eai {
  margin-top: var(--yf9sr13);
}
.snqh4eam {
  margin-top: var(--yf9sr14);
}
.snqh4eaq {
  margin-top: var(--yf9sr15);
}
.snqh4eau {
  margin-top: var(--yf9sr16);
}
.snqh4eay {
  margin-top: var(--yf9sr17);
}
.snqh4eb2 {
  margin-top: 0;
}
.snqh4eb6 {
  margin-bottom: var(--yf9sr10);
}
.snqh4eba {
  margin-bottom: var(--yf9sr11);
}
.snqh4ebe {
  margin-bottom: var(--yf9sr12);
}
.snqh4ebi {
  margin-bottom: var(--yf9sr13);
}
.snqh4ebm {
  margin-bottom: var(--yf9sr14);
}
.snqh4ebq {
  margin-bottom: var(--yf9sr15);
}
.snqh4ebu {
  margin-bottom: var(--yf9sr16);
}
.snqh4eby {
  margin-bottom: var(--yf9sr17);
}
.snqh4ec2 {
  margin-bottom: 0;
}
.snqh4ec6 {
  margin-right: var(--yf9sr10);
}
.snqh4eca {
  margin-right: var(--yf9sr11);
}
.snqh4ece {
  margin-right: var(--yf9sr12);
}
.snqh4eci {
  margin-right: var(--yf9sr13);
}
.snqh4ecm {
  margin-right: var(--yf9sr14);
}
.snqh4ecq {
  margin-right: var(--yf9sr15);
}
.snqh4ecu {
  margin-right: var(--yf9sr16);
}
.snqh4ecy {
  margin-right: var(--yf9sr17);
}
.snqh4ed2 {
  margin-right: 0;
}
.snqh4ed6 {
  margin-left: var(--yf9sr10);
}
.snqh4eda {
  margin-left: var(--yf9sr11);
}
.snqh4ede {
  margin-left: var(--yf9sr12);
}
.snqh4edi {
  margin-left: var(--yf9sr13);
}
.snqh4edm {
  margin-left: var(--yf9sr14);
}
.snqh4edq {
  margin-left: var(--yf9sr15);
}
.snqh4edu {
  margin-left: var(--yf9sr16);
}
.snqh4edy {
  margin-left: var(--yf9sr17);
}
.snqh4ee2 {
  margin-left: 0;
}
.snqh4ee6 {
  align-items: flex-start;
}
.snqh4eea {
  align-items: center;
}
.snqh4eee {
  align-items: flex-end;
}
.snqh4eei {
  justify-content: flex-start;
}
.snqh4eem {
  justify-content: center;
}
.snqh4eeq {
  justify-content: flex-end;
}
.snqh4eeu {
  justify-content: space-between;
}
.snqh4eey {
  flex-direction: row;
}
.snqh4ef2 {
  flex-direction: row-reverse;
}
.snqh4ef6 {
  flex-direction: column;
}
.snqh4efa {
  flex-direction: column-reverse;
}
.snqh4efe {
  flex-wrap: wrap;
}
.snqh4efi {
  flex-wrap: nowrap;
}
.snqh4efm {
  flex-shrink: 0;
}
.snqh4efq {
  flex-grow: 0;
}
.snqh4efu {
  flex-grow: 1;
}
.snqh4efy {
  text-align: left;
}
.snqh4eg2 {
  text-align: center;
}
.snqh4eg6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .snqh4e4r {
    display: none;
  }
  .snqh4e4v {
    display: block;
  }
  .snqh4e4z {
    display: inline;
  }
  .snqh4e53 {
    display: inline-block;
  }
  .snqh4e57 {
    display: flex;
  }
  .snqh4e5b {
    position: relative;
  }
  .snqh4e5f {
    position: absolute;
  }
  .snqh4e5j {
    position: fixed;
  }
  .snqh4e5n {
    border-radius: 0;
  }
  .snqh4e5r {
    border-radius: 9999px;
  }
  .snqh4e5v {
    border-radius: var(--yf9sr1a);
  }
  .snqh4e5z {
    border-radius: var(--yf9sr1b);
  }
  .snqh4e63 {
    border-radius: var(--yf9sr1c);
  }
  .snqh4e67 {
    padding-top: var(--yf9sr10);
  }
  .snqh4e6b {
    padding-top: var(--yf9sr11);
  }
  .snqh4e6f {
    padding-top: var(--yf9sr12);
  }
  .snqh4e6j {
    padding-top: var(--yf9sr13);
  }
  .snqh4e6n {
    padding-top: var(--yf9sr14);
  }
  .snqh4e6r {
    padding-top: var(--yf9sr15);
  }
  .snqh4e6v {
    padding-top: var(--yf9sr16);
  }
  .snqh4e6z {
    padding-top: var(--yf9sr17);
  }
  .snqh4e73 {
    padding-top: 0;
  }
  .snqh4e77 {
    padding-bottom: var(--yf9sr10);
  }
  .snqh4e7b {
    padding-bottom: var(--yf9sr11);
  }
  .snqh4e7f {
    padding-bottom: var(--yf9sr12);
  }
  .snqh4e7j {
    padding-bottom: var(--yf9sr13);
  }
  .snqh4e7n {
    padding-bottom: var(--yf9sr14);
  }
  .snqh4e7r {
    padding-bottom: var(--yf9sr15);
  }
  .snqh4e7v {
    padding-bottom: var(--yf9sr16);
  }
  .snqh4e7z {
    padding-bottom: var(--yf9sr17);
  }
  .snqh4e83 {
    padding-bottom: 0;
  }
  .snqh4e87 {
    padding-right: var(--yf9sr10);
  }
  .snqh4e8b {
    padding-right: var(--yf9sr11);
  }
  .snqh4e8f {
    padding-right: var(--yf9sr12);
  }
  .snqh4e8j {
    padding-right: var(--yf9sr13);
  }
  .snqh4e8n {
    padding-right: var(--yf9sr14);
  }
  .snqh4e8r {
    padding-right: var(--yf9sr15);
  }
  .snqh4e8v {
    padding-right: var(--yf9sr16);
  }
  .snqh4e8z {
    padding-right: var(--yf9sr17);
  }
  .snqh4e93 {
    padding-right: 0;
  }
  .snqh4e97 {
    padding-left: var(--yf9sr10);
  }
  .snqh4e9b {
    padding-left: var(--yf9sr11);
  }
  .snqh4e9f {
    padding-left: var(--yf9sr12);
  }
  .snqh4e9j {
    padding-left: var(--yf9sr13);
  }
  .snqh4e9n {
    padding-left: var(--yf9sr14);
  }
  .snqh4e9r {
    padding-left: var(--yf9sr15);
  }
  .snqh4e9v {
    padding-left: var(--yf9sr16);
  }
  .snqh4e9z {
    padding-left: var(--yf9sr17);
  }
  .snqh4ea3 {
    padding-left: 0;
  }
  .snqh4ea7 {
    margin-top: var(--yf9sr10);
  }
  .snqh4eab {
    margin-top: var(--yf9sr11);
  }
  .snqh4eaf {
    margin-top: var(--yf9sr12);
  }
  .snqh4eaj {
    margin-top: var(--yf9sr13);
  }
  .snqh4ean {
    margin-top: var(--yf9sr14);
  }
  .snqh4ear {
    margin-top: var(--yf9sr15);
  }
  .snqh4eav {
    margin-top: var(--yf9sr16);
  }
  .snqh4eaz {
    margin-top: var(--yf9sr17);
  }
  .snqh4eb3 {
    margin-top: 0;
  }
  .snqh4eb7 {
    margin-bottom: var(--yf9sr10);
  }
  .snqh4ebb {
    margin-bottom: var(--yf9sr11);
  }
  .snqh4ebf {
    margin-bottom: var(--yf9sr12);
  }
  .snqh4ebj {
    margin-bottom: var(--yf9sr13);
  }
  .snqh4ebn {
    margin-bottom: var(--yf9sr14);
  }
  .snqh4ebr {
    margin-bottom: var(--yf9sr15);
  }
  .snqh4ebv {
    margin-bottom: var(--yf9sr16);
  }
  .snqh4ebz {
    margin-bottom: var(--yf9sr17);
  }
  .snqh4ec3 {
    margin-bottom: 0;
  }
  .snqh4ec7 {
    margin-right: var(--yf9sr10);
  }
  .snqh4ecb {
    margin-right: var(--yf9sr11);
  }
  .snqh4ecf {
    margin-right: var(--yf9sr12);
  }
  .snqh4ecj {
    margin-right: var(--yf9sr13);
  }
  .snqh4ecn {
    margin-right: var(--yf9sr14);
  }
  .snqh4ecr {
    margin-right: var(--yf9sr15);
  }
  .snqh4ecv {
    margin-right: var(--yf9sr16);
  }
  .snqh4ecz {
    margin-right: var(--yf9sr17);
  }
  .snqh4ed3 {
    margin-right: 0;
  }
  .snqh4ed7 {
    margin-left: var(--yf9sr10);
  }
  .snqh4edb {
    margin-left: var(--yf9sr11);
  }
  .snqh4edf {
    margin-left: var(--yf9sr12);
  }
  .snqh4edj {
    margin-left: var(--yf9sr13);
  }
  .snqh4edn {
    margin-left: var(--yf9sr14);
  }
  .snqh4edr {
    margin-left: var(--yf9sr15);
  }
  .snqh4edv {
    margin-left: var(--yf9sr16);
  }
  .snqh4edz {
    margin-left: var(--yf9sr17);
  }
  .snqh4ee3 {
    margin-left: 0;
  }
  .snqh4ee7 {
    align-items: flex-start;
  }
  .snqh4eeb {
    align-items: center;
  }
  .snqh4eef {
    align-items: flex-end;
  }
  .snqh4eej {
    justify-content: flex-start;
  }
  .snqh4een {
    justify-content: center;
  }
  .snqh4eer {
    justify-content: flex-end;
  }
  .snqh4eev {
    justify-content: space-between;
  }
  .snqh4eez {
    flex-direction: row;
  }
  .snqh4ef3 {
    flex-direction: row-reverse;
  }
  .snqh4ef7 {
    flex-direction: column;
  }
  .snqh4efb {
    flex-direction: column-reverse;
  }
  .snqh4eff {
    flex-wrap: wrap;
  }
  .snqh4efj {
    flex-wrap: nowrap;
  }
  .snqh4efn {
    flex-shrink: 0;
  }
  .snqh4efr {
    flex-grow: 0;
  }
  .snqh4efv {
    flex-grow: 1;
  }
  .snqh4efz {
    text-align: left;
  }
  .snqh4eg3 {
    text-align: center;
  }
  .snqh4eg7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .snqh4e4s {
    display: none;
  }
  .snqh4e4w {
    display: block;
  }
  .snqh4e50 {
    display: inline;
  }
  .snqh4e54 {
    display: inline-block;
  }
  .snqh4e58 {
    display: flex;
  }
  .snqh4e5c {
    position: relative;
  }
  .snqh4e5g {
    position: absolute;
  }
  .snqh4e5k {
    position: fixed;
  }
  .snqh4e5o {
    border-radius: 0;
  }
  .snqh4e5s {
    border-radius: 9999px;
  }
  .snqh4e5w {
    border-radius: var(--yf9sr1a);
  }
  .snqh4e60 {
    border-radius: var(--yf9sr1b);
  }
  .snqh4e64 {
    border-radius: var(--yf9sr1c);
  }
  .snqh4e68 {
    padding-top: var(--yf9sr10);
  }
  .snqh4e6c {
    padding-top: var(--yf9sr11);
  }
  .snqh4e6g {
    padding-top: var(--yf9sr12);
  }
  .snqh4e6k {
    padding-top: var(--yf9sr13);
  }
  .snqh4e6o {
    padding-top: var(--yf9sr14);
  }
  .snqh4e6s {
    padding-top: var(--yf9sr15);
  }
  .snqh4e6w {
    padding-top: var(--yf9sr16);
  }
  .snqh4e70 {
    padding-top: var(--yf9sr17);
  }
  .snqh4e74 {
    padding-top: 0;
  }
  .snqh4e78 {
    padding-bottom: var(--yf9sr10);
  }
  .snqh4e7c {
    padding-bottom: var(--yf9sr11);
  }
  .snqh4e7g {
    padding-bottom: var(--yf9sr12);
  }
  .snqh4e7k {
    padding-bottom: var(--yf9sr13);
  }
  .snqh4e7o {
    padding-bottom: var(--yf9sr14);
  }
  .snqh4e7s {
    padding-bottom: var(--yf9sr15);
  }
  .snqh4e7w {
    padding-bottom: var(--yf9sr16);
  }
  .snqh4e80 {
    padding-bottom: var(--yf9sr17);
  }
  .snqh4e84 {
    padding-bottom: 0;
  }
  .snqh4e88 {
    padding-right: var(--yf9sr10);
  }
  .snqh4e8c {
    padding-right: var(--yf9sr11);
  }
  .snqh4e8g {
    padding-right: var(--yf9sr12);
  }
  .snqh4e8k {
    padding-right: var(--yf9sr13);
  }
  .snqh4e8o {
    padding-right: var(--yf9sr14);
  }
  .snqh4e8s {
    padding-right: var(--yf9sr15);
  }
  .snqh4e8w {
    padding-right: var(--yf9sr16);
  }
  .snqh4e90 {
    padding-right: var(--yf9sr17);
  }
  .snqh4e94 {
    padding-right: 0;
  }
  .snqh4e98 {
    padding-left: var(--yf9sr10);
  }
  .snqh4e9c {
    padding-left: var(--yf9sr11);
  }
  .snqh4e9g {
    padding-left: var(--yf9sr12);
  }
  .snqh4e9k {
    padding-left: var(--yf9sr13);
  }
  .snqh4e9o {
    padding-left: var(--yf9sr14);
  }
  .snqh4e9s {
    padding-left: var(--yf9sr15);
  }
  .snqh4e9w {
    padding-left: var(--yf9sr16);
  }
  .snqh4ea0 {
    padding-left: var(--yf9sr17);
  }
  .snqh4ea4 {
    padding-left: 0;
  }
  .snqh4ea8 {
    margin-top: var(--yf9sr10);
  }
  .snqh4eac {
    margin-top: var(--yf9sr11);
  }
  .snqh4eag {
    margin-top: var(--yf9sr12);
  }
  .snqh4eak {
    margin-top: var(--yf9sr13);
  }
  .snqh4eao {
    margin-top: var(--yf9sr14);
  }
  .snqh4eas {
    margin-top: var(--yf9sr15);
  }
  .snqh4eaw {
    margin-top: var(--yf9sr16);
  }
  .snqh4eb0 {
    margin-top: var(--yf9sr17);
  }
  .snqh4eb4 {
    margin-top: 0;
  }
  .snqh4eb8 {
    margin-bottom: var(--yf9sr10);
  }
  .snqh4ebc {
    margin-bottom: var(--yf9sr11);
  }
  .snqh4ebg {
    margin-bottom: var(--yf9sr12);
  }
  .snqh4ebk {
    margin-bottom: var(--yf9sr13);
  }
  .snqh4ebo {
    margin-bottom: var(--yf9sr14);
  }
  .snqh4ebs {
    margin-bottom: var(--yf9sr15);
  }
  .snqh4ebw {
    margin-bottom: var(--yf9sr16);
  }
  .snqh4ec0 {
    margin-bottom: var(--yf9sr17);
  }
  .snqh4ec4 {
    margin-bottom: 0;
  }
  .snqh4ec8 {
    margin-right: var(--yf9sr10);
  }
  .snqh4ecc {
    margin-right: var(--yf9sr11);
  }
  .snqh4ecg {
    margin-right: var(--yf9sr12);
  }
  .snqh4eck {
    margin-right: var(--yf9sr13);
  }
  .snqh4eco {
    margin-right: var(--yf9sr14);
  }
  .snqh4ecs {
    margin-right: var(--yf9sr15);
  }
  .snqh4ecw {
    margin-right: var(--yf9sr16);
  }
  .snqh4ed0 {
    margin-right: var(--yf9sr17);
  }
  .snqh4ed4 {
    margin-right: 0;
  }
  .snqh4ed8 {
    margin-left: var(--yf9sr10);
  }
  .snqh4edc {
    margin-left: var(--yf9sr11);
  }
  .snqh4edg {
    margin-left: var(--yf9sr12);
  }
  .snqh4edk {
    margin-left: var(--yf9sr13);
  }
  .snqh4edo {
    margin-left: var(--yf9sr14);
  }
  .snqh4eds {
    margin-left: var(--yf9sr15);
  }
  .snqh4edw {
    margin-left: var(--yf9sr16);
  }
  .snqh4ee0 {
    margin-left: var(--yf9sr17);
  }
  .snqh4ee4 {
    margin-left: 0;
  }
  .snqh4ee8 {
    align-items: flex-start;
  }
  .snqh4eec {
    align-items: center;
  }
  .snqh4eeg {
    align-items: flex-end;
  }
  .snqh4eek {
    justify-content: flex-start;
  }
  .snqh4eeo {
    justify-content: center;
  }
  .snqh4ees {
    justify-content: flex-end;
  }
  .snqh4eew {
    justify-content: space-between;
  }
  .snqh4ef0 {
    flex-direction: row;
  }
  .snqh4ef4 {
    flex-direction: row-reverse;
  }
  .snqh4ef8 {
    flex-direction: column;
  }
  .snqh4efc {
    flex-direction: column-reverse;
  }
  .snqh4efg {
    flex-wrap: wrap;
  }
  .snqh4efk {
    flex-wrap: nowrap;
  }
  .snqh4efo {
    flex-shrink: 0;
  }
  .snqh4efs {
    flex-grow: 0;
  }
  .snqh4efw {
    flex-grow: 1;
  }
  .snqh4eg0 {
    text-align: left;
  }
  .snqh4eg4 {
    text-align: center;
  }
  .snqh4eg8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .snqh4e4t {
    display: none;
  }
  .snqh4e4x {
    display: block;
  }
  .snqh4e51 {
    display: inline;
  }
  .snqh4e55 {
    display: inline-block;
  }
  .snqh4e59 {
    display: flex;
  }
  .snqh4e5d {
    position: relative;
  }
  .snqh4e5h {
    position: absolute;
  }
  .snqh4e5l {
    position: fixed;
  }
  .snqh4e5p {
    border-radius: 0;
  }
  .snqh4e5t {
    border-radius: 9999px;
  }
  .snqh4e5x {
    border-radius: var(--yf9sr1a);
  }
  .snqh4e61 {
    border-radius: var(--yf9sr1b);
  }
  .snqh4e65 {
    border-radius: var(--yf9sr1c);
  }
  .snqh4e69 {
    padding-top: var(--yf9sr10);
  }
  .snqh4e6d {
    padding-top: var(--yf9sr11);
  }
  .snqh4e6h {
    padding-top: var(--yf9sr12);
  }
  .snqh4e6l {
    padding-top: var(--yf9sr13);
  }
  .snqh4e6p {
    padding-top: var(--yf9sr14);
  }
  .snqh4e6t {
    padding-top: var(--yf9sr15);
  }
  .snqh4e6x {
    padding-top: var(--yf9sr16);
  }
  .snqh4e71 {
    padding-top: var(--yf9sr17);
  }
  .snqh4e75 {
    padding-top: 0;
  }
  .snqh4e79 {
    padding-bottom: var(--yf9sr10);
  }
  .snqh4e7d {
    padding-bottom: var(--yf9sr11);
  }
  .snqh4e7h {
    padding-bottom: var(--yf9sr12);
  }
  .snqh4e7l {
    padding-bottom: var(--yf9sr13);
  }
  .snqh4e7p {
    padding-bottom: var(--yf9sr14);
  }
  .snqh4e7t {
    padding-bottom: var(--yf9sr15);
  }
  .snqh4e7x {
    padding-bottom: var(--yf9sr16);
  }
  .snqh4e81 {
    padding-bottom: var(--yf9sr17);
  }
  .snqh4e85 {
    padding-bottom: 0;
  }
  .snqh4e89 {
    padding-right: var(--yf9sr10);
  }
  .snqh4e8d {
    padding-right: var(--yf9sr11);
  }
  .snqh4e8h {
    padding-right: var(--yf9sr12);
  }
  .snqh4e8l {
    padding-right: var(--yf9sr13);
  }
  .snqh4e8p {
    padding-right: var(--yf9sr14);
  }
  .snqh4e8t {
    padding-right: var(--yf9sr15);
  }
  .snqh4e8x {
    padding-right: var(--yf9sr16);
  }
  .snqh4e91 {
    padding-right: var(--yf9sr17);
  }
  .snqh4e95 {
    padding-right: 0;
  }
  .snqh4e99 {
    padding-left: var(--yf9sr10);
  }
  .snqh4e9d {
    padding-left: var(--yf9sr11);
  }
  .snqh4e9h {
    padding-left: var(--yf9sr12);
  }
  .snqh4e9l {
    padding-left: var(--yf9sr13);
  }
  .snqh4e9p {
    padding-left: var(--yf9sr14);
  }
  .snqh4e9t {
    padding-left: var(--yf9sr15);
  }
  .snqh4e9x {
    padding-left: var(--yf9sr16);
  }
  .snqh4ea1 {
    padding-left: var(--yf9sr17);
  }
  .snqh4ea5 {
    padding-left: 0;
  }
  .snqh4ea9 {
    margin-top: var(--yf9sr10);
  }
  .snqh4ead {
    margin-top: var(--yf9sr11);
  }
  .snqh4eah {
    margin-top: var(--yf9sr12);
  }
  .snqh4eal {
    margin-top: var(--yf9sr13);
  }
  .snqh4eap {
    margin-top: var(--yf9sr14);
  }
  .snqh4eat {
    margin-top: var(--yf9sr15);
  }
  .snqh4eax {
    margin-top: var(--yf9sr16);
  }
  .snqh4eb1 {
    margin-top: var(--yf9sr17);
  }
  .snqh4eb5 {
    margin-top: 0;
  }
  .snqh4eb9 {
    margin-bottom: var(--yf9sr10);
  }
  .snqh4ebd {
    margin-bottom: var(--yf9sr11);
  }
  .snqh4ebh {
    margin-bottom: var(--yf9sr12);
  }
  .snqh4ebl {
    margin-bottom: var(--yf9sr13);
  }
  .snqh4ebp {
    margin-bottom: var(--yf9sr14);
  }
  .snqh4ebt {
    margin-bottom: var(--yf9sr15);
  }
  .snqh4ebx {
    margin-bottom: var(--yf9sr16);
  }
  .snqh4ec1 {
    margin-bottom: var(--yf9sr17);
  }
  .snqh4ec5 {
    margin-bottom: 0;
  }
  .snqh4ec9 {
    margin-right: var(--yf9sr10);
  }
  .snqh4ecd {
    margin-right: var(--yf9sr11);
  }
  .snqh4ech {
    margin-right: var(--yf9sr12);
  }
  .snqh4ecl {
    margin-right: var(--yf9sr13);
  }
  .snqh4ecp {
    margin-right: var(--yf9sr14);
  }
  .snqh4ect {
    margin-right: var(--yf9sr15);
  }
  .snqh4ecx {
    margin-right: var(--yf9sr16);
  }
  .snqh4ed1 {
    margin-right: var(--yf9sr17);
  }
  .snqh4ed5 {
    margin-right: 0;
  }
  .snqh4ed9 {
    margin-left: var(--yf9sr10);
  }
  .snqh4edd {
    margin-left: var(--yf9sr11);
  }
  .snqh4edh {
    margin-left: var(--yf9sr12);
  }
  .snqh4edl {
    margin-left: var(--yf9sr13);
  }
  .snqh4edp {
    margin-left: var(--yf9sr14);
  }
  .snqh4edt {
    margin-left: var(--yf9sr15);
  }
  .snqh4edx {
    margin-left: var(--yf9sr16);
  }
  .snqh4ee1 {
    margin-left: var(--yf9sr17);
  }
  .snqh4ee5 {
    margin-left: 0;
  }
  .snqh4ee9 {
    align-items: flex-start;
  }
  .snqh4eed {
    align-items: center;
  }
  .snqh4eeh {
    align-items: flex-end;
  }
  .snqh4eel {
    justify-content: flex-start;
  }
  .snqh4eep {
    justify-content: center;
  }
  .snqh4eet {
    justify-content: flex-end;
  }
  .snqh4eex {
    justify-content: space-between;
  }
  .snqh4ef1 {
    flex-direction: row;
  }
  .snqh4ef5 {
    flex-direction: row-reverse;
  }
  .snqh4ef9 {
    flex-direction: column;
  }
  .snqh4efd {
    flex-direction: column-reverse;
  }
  .snqh4efh {
    flex-wrap: wrap;
  }
  .snqh4efl {
    flex-wrap: nowrap;
  }
  .snqh4efp {
    flex-shrink: 0;
  }
  .snqh4eft {
    flex-grow: 0;
  }
  .snqh4efx {
    flex-grow: 1;
  }
  .snqh4eg1 {
    text-align: left;
  }
  .snqh4eg5 {
    text-align: center;
  }
  .snqh4eg9 {
    text-align: right;
  }
}
.fkgxba0 {
  --yf9sr10: 24px;
  --yf9sr11: 4px;
  --yf9sr12: 8px;
  --yf9sr13: 12px;
  --yf9sr14: 20px;
  --yf9sr15: 32px;
  --yf9sr16: 48px;
  --yf9sr17: 96px;
  --yf9sr18: 44px;
  --yf9sr19: 4px;
  --yf9sr1a: 4px;
  --yf9sr1b: 6px;
  --yf9sr1c: 10px;
  --yf9sr1d: #e60278;
  --yf9sr1e: #f8b1dc;
  --yf9sr1f: #fdc221;
  --yf9sr1g: #fee384;
  --yf9sr1h: #b91e1e;
  --yf9sr1i: #fb999a;
  --yf9sr1j: #838fa5;
  --yf9sr1k: rgba(159, 176, 245, 0.7);
  --yf9sr1l: #4964e9;
  --yf9sr1m: #9fb0f5;
  --yf9sr1n: #1d559d;
  --yf9sr1o: #98c9f1;
  --yf9sr1p: #2e3849;
  --yf9sr1r: #d2d7df;
  --yf9sr1q: #fff;
  --yf9sr1s: #12784f;
  --yf9sr1t: #8bdec5;
  --yf9sr1u: #512eaa;
  --yf9sr1v: #c6acf5;
  --yf9sr1w: 1px;
  --yf9sr1x: 2px;
  --yf9sr1y: 3px;
  --yf9sr1z: 400px;
  --yf9sr110: 660px;
  --yf9sr111: 940px;
  --yf9sr112: 1280px;
  --yf9sr113: #e60278;
  --yf9sr114: #f8b1dc;
  --yf9sr115: #723d02;
  --yf9sr116: #fee384;
  --yf9sr117: #b91e1e;
  --yf9sr118: #fb999a;
  --yf9sr119: #4964e9;
  --yf9sr11a: #9fb0f5;
  --yf9sr11b: #1d559d;
  --yf9sr11c: #98c9f1;
  --yf9sr11d: #4964e9;
  --yf9sr11f: #9fb0f5;
  --yf9sr11e: #4964e9;
  --yf9sr11g: #512eaa;
  --yf9sr11h: #c6acf5;
  --yf9sr11i: #2e3849;
  --yf9sr11j: #fff;
  --yf9sr11k: #12784f;
  --yf9sr11l: #8bdec5;
  --yf9sr11m: #512eaa;
  --yf9sr11n: #c6acf5;
  --yf9sr11o: #f57c00;
  --yf9sr11p: #5a6881;
  --yf9sr11q: rgba(255, 255, 255, 0.65);
  --yf9sr11r: #f7f8fb;
  --yf9sr11s: #0e131b;
  --yf9sr11t: #0d3880;
  --yf9sr11u: #e60278;
  --yf9sr11v: #cd026b;
  --yf9sr11w: #fd0585;
  --yf9sr11x: #feeffa;
  --yf9sr11y: #fdd7f3;
  --yf9sr11z: #fde3f6;
  --yf9sr120: #fdc221;
  --yf9sr121: #fef8de;
  --yf9sr122: #b91e1e;
  --yf9sr123: #a31a1a;
  --yf9sr124: #db1616;
  --yf9sr125: #ffe3e2;
  --yf9sr126: #fef3f3;
  --yf9sr127: #fcdbdb;
  --yf9sr128: #fde7e7;
  --yf9sr129: #4964e9;
  --yf9sr12a: #3251e6;
  --yf9sr12b: #5975ff;
  --yf9sr12c: #f4f6fe;
  --yf9sr12d: #dde3fc;
  --yf9sr12e: #e8ecfd;
  --yf9sr12f: #1d559d;
  --yf9sr12g: #e3f2fb;
  --yf9sr12h: #2e3849;
  --yf9sr12i: #242c39;
  --yf9sr12j: #384459;
  --yf9sr12k: #eaecf1;
  --yf9sr12l: #f7f8fb;
  --yf9sr12m: #e6e9f3;
  --yf9sr12n: #eff1f7;
  --yf9sr12o: #12784f;
  --yf9sr12p: #e2f7f1;
  --yf9sr12q: #512eaa;
  --yf9sr12r: #f1e8fd;
  --yf9sr12s: #fff;
  --yf9sr12t: #1c2330;
  --yf9sr12u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --yf9sr12v: 1456;
  --yf9sr12w: 1900;
  --yf9sr12x: -500;
  --yf9sr12y: 0;
  --yf9sr12z: 2048;
  --yf9sr130: 12px;
  --yf9sr131: 20px;
  --yf9sr132: 8.5313px;
  --yf9sr133: -0.4642em;
  --yf9sr134: -0.4915em;
  --yf9sr135: 12px;
  --yf9sr136: 20px;
  --yf9sr137: 8.5313px;
  --yf9sr138: -0.4642em;
  --yf9sr139: -0.4915em;
  --yf9sr13a: 14px;
  --yf9sr13b: 20px;
  --yf9sr13c: 9.9531px;
  --yf9sr13d: -0.3451em;
  --yf9sr13e: -0.3725em;
  --yf9sr13f: 14px;
  --yf9sr13g: 20px;
  --yf9sr13h: 9.9531px;
  --yf9sr13i: -0.3451em;
  --yf9sr13j: -0.3725em;
  --yf9sr13k: 16px;
  --yf9sr13l: 24px;
  --yf9sr13m: 11.375px;
  --yf9sr13n: -0.3809em;
  --yf9sr13o: -0.4082em;
  --yf9sr13p: 16px;
  --yf9sr13q: 24px;
  --yf9sr13r: 11.375px;
  --yf9sr13s: -0.3809em;
  --yf9sr13t: -0.4082em;
  --yf9sr13u: 18px;
  --yf9sr13v: 28px;
  --yf9sr13w: 12.7969px;
  --yf9sr13x: -0.4086em;
  --yf9sr13y: -0.436em;
  --yf9sr13z: 18px;
  --yf9sr140: 28px;
  --yf9sr141: 12.7969px;
  --yf9sr142: -0.4086em;
  --yf9sr143: -0.436em;
  --yf9sr144: 400;
  --yf9sr145: 500;
  --yf9sr146: 700;
  --yf9sr147: 28px;
  --yf9sr148: 36px;
  --yf9sr149: 19.9063px;
  --yf9sr14a: -0.2737em;
  --yf9sr14b: -0.3011em;
  --yf9sr14c: 42px;
  --yf9sr14d: 44px;
  --yf9sr14e: 29.8594px;
  --yf9sr14f: -0.1547em;
  --yf9sr14g: -0.182em;
  --yf9sr14h: 21px;
  --yf9sr14i: 32px;
  --yf9sr14j: 14.9297px;
  --yf9sr14k: -0.3928em;
  --yf9sr14l: -0.4201em;
  --yf9sr14m: 28px;
  --yf9sr14n: 36px;
  --yf9sr14o: 19.9063px;
  --yf9sr14p: -0.2737em;
  --yf9sr14q: -0.3011em;
  --yf9sr14r: 21px;
  --yf9sr14s: 28px;
  --yf9sr14t: 14.9297px;
  --yf9sr14u: -0.2975em;
  --yf9sr14v: -0.3249em;
  --yf9sr14w: 21px;
  --yf9sr14x: 28px;
  --yf9sr14y: 14.9297px;
  --yf9sr14z: -0.2975em;
  --yf9sr150: -0.3249em;
  --yf9sr151: 18px;
  --yf9sr152: 28px;
  --yf9sr153: 12.7969px;
  --yf9sr154: -0.4086em;
  --yf9sr155: -0.436em;
  --yf9sr156: 18px;
  --yf9sr157: 28px;
  --yf9sr158: 12.7969px;
  --yf9sr159: -0.4086em;
  --yf9sr15a: -0.436em;
  --yf9sr15b: 400;
  --yf9sr15c: 500;
  --yf9sr15d: 24px;
  --yf9sr15e: 20px;
  --yf9sr15f: transform 0.125s ease, opacity 0.125s ease;
  --yf9sr15g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --yf9sr15h: scale(0.95);
  --yf9sr15i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --yf9sr15j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --yf9sr15k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1wxfcta0 {
  font-family: var(--yf9sr12u);
}
._1wxfcta1 {
  font-weight: var(--yf9sr144);
}
._1wxfcta2 {
  font-weight: var(--yf9sr145);
}
._1wxfcta3 {
  font-weight: var(--yf9sr146);
}
._1wxfcta4 {
  --_1d0g9qk0: var(--yf9sr130);
  --_1d0g9qk1: var(--yf9sr131);
  --_1d0g9qk2: var(--yf9sr133);
  --_1d0g9qk3: var(--yf9sr134);
}
._1wxfcta7 {
  --_1d0g9qk0: var(--yf9sr13a);
  --_1d0g9qk1: var(--yf9sr13b);
  --_1d0g9qk2: var(--yf9sr13d);
  --_1d0g9qk3: var(--yf9sr13e);
}
._1wxfctaa {
  --_1d0g9qk0: var(--yf9sr13k);
  --_1d0g9qk1: var(--yf9sr13l);
  --_1d0g9qk2: var(--yf9sr13n);
  --_1d0g9qk3: var(--yf9sr13o);
}
._1wxfctad {
  --_1d0g9qk0: var(--yf9sr13u);
  --_1d0g9qk1: var(--yf9sr13v);
  --_1d0g9qk2: var(--yf9sr13x);
  --_1d0g9qk3: var(--yf9sr13y);
}
._1wxfctag {
  font-size: var(--yf9sr130);
  line-height: var(--yf9sr131);
}
._1wxfctah {
  font-size: var(--yf9sr13a);
  line-height: var(--yf9sr13b);
}
._1wxfctai {
  font-size: var(--yf9sr13k);
  line-height: var(--yf9sr13l);
}
._1wxfctaj {
  font-size: var(--yf9sr13u);
  line-height: var(--yf9sr13v);
}
._1wxfctak {
  font-weight: var(--yf9sr15b);
}
._1wxfctal {
  font-weight: var(--yf9sr15c);
}
._1wxfctam {
  --_1d0g9qk0: var(--yf9sr147);
  --_1d0g9qk1: var(--yf9sr148);
  --_1d0g9qk2: var(--yf9sr14a);
  --_1d0g9qk3: var(--yf9sr14b);
}
._1wxfctap {
  --_1d0g9qk0: var(--yf9sr14h);
  --_1d0g9qk1: var(--yf9sr14i);
  --_1d0g9qk2: var(--yf9sr14k);
  --_1d0g9qk3: var(--yf9sr14l);
}
._1wxfctas {
  --_1d0g9qk0: var(--yf9sr14r);
  --_1d0g9qk1: var(--yf9sr14s);
  --_1d0g9qk2: var(--yf9sr14u);
  --_1d0g9qk3: var(--yf9sr14v);
}
._1wxfctav {
  --_1d0g9qk0: var(--yf9sr151);
  --_1d0g9qk1: var(--yf9sr152);
  --_1d0g9qk2: var(--yf9sr154);
  --_1d0g9qk3: var(--yf9sr155);
}
html:not(.snqh4ez) ._1wxfcta18 {
  --_1wxfctay: var(--yf9sr117);
  --_1wxfctaz: var(--yf9sr115);
  --_1wxfcta10: var(--yf9sr11b);
  --_1wxfcta11: var(--yf9sr11m);
  --_1wxfcta12: var(--yf9sr11k);
  --_1wxfcta13: var(--yf9sr113);
  --_1wxfcta14: var(--yf9sr119);
  --_1wxfcta15: var(--yf9sr11i);
  --_1wxfcta16: var(--yf9sr11p);
  --_1wxfcta17: var(--yf9sr11d);
}
html:not(.snqh4ez) ._1wxfcta19 {
  --_1wxfctay: var(--yf9sr118);
  --_1wxfctaz: var(--yf9sr116);
  --_1wxfcta10: var(--yf9sr11c);
  --_1wxfcta11: var(--yf9sr11n);
  --_1wxfcta12: var(--yf9sr11l);
  --_1wxfcta13: var(--yf9sr114);
  --_1wxfcta14: var(--yf9sr11a);
  --_1wxfcta15: var(--yf9sr11j);
  --_1wxfcta16: var(--yf9sr11q);
  --_1wxfcta17: var(--yf9sr11f);
}
html.snqh4ez ._1wxfcta1a {
  --_1wxfctay: var(--yf9sr117);
  --_1wxfctaz: var(--yf9sr115);
  --_1wxfcta10: var(--yf9sr11b);
  --_1wxfcta11: var(--yf9sr11m);
  --_1wxfcta12: var(--yf9sr11k);
  --_1wxfcta13: var(--yf9sr113);
  --_1wxfcta14: var(--yf9sr119);
  --_1wxfcta15: var(--yf9sr11i);
  --_1wxfcta16: var(--yf9sr11p);
  --_1wxfcta17: var(--yf9sr11d);
}
html.snqh4ez ._1wxfcta1b {
  --_1wxfctay: var(--yf9sr118);
  --_1wxfctaz: var(--yf9sr116);
  --_1wxfcta10: var(--yf9sr11c);
  --_1wxfcta11: var(--yf9sr11n);
  --_1wxfcta12: var(--yf9sr11l);
  --_1wxfcta13: var(--yf9sr114);
  --_1wxfcta14: var(--yf9sr11a);
  --_1wxfcta15: var(--yf9sr11j);
  --_1wxfcta16: var(--yf9sr11q);
  --_1wxfcta17: var(--yf9sr11f);
}
html:not(.snqh4ez) ._1wxfcta1c,
html:not(.snqh4ez) ._1wxfcta1d,
html:not(.snqh4ez) ._1wxfcta1e,
html:not(.snqh4ez) ._1wxfcta1f {
  --_1wxfcta15: var(--_1wxfctay);
}
html:not(.snqh4ez) ._1wxfcta1g,
html:not(.snqh4ez) ._1wxfcta1h {
  --_1wxfcta15: var(--_1wxfctaz);
}
html:not(.snqh4ez) ._1wxfcta1i {
  --_1wxfcta15: var(--_1wxfcta12);
}
html:not(.snqh4ez) ._1wxfcta1j {
  --_1wxfcta15: var(--_1wxfcta10);
}
html:not(.snqh4ez) ._1wxfcta1k {
  --_1wxfcta15: var(--_1wxfcta11);
}
html.snqh4ez ._1wxfcta1l,
html.snqh4ez ._1wxfcta1m,
html.snqh4ez ._1wxfcta1n,
html.snqh4ez ._1wxfcta1o {
  --_1wxfcta15: var(--_1wxfctay);
}
html.snqh4ez ._1wxfcta1p,
html.snqh4ez ._1wxfcta1q {
  --_1wxfcta15: var(--_1wxfctaz);
}
html.snqh4ez ._1wxfcta1r {
  --_1wxfcta15: var(--_1wxfcta12);
}
html.snqh4ez ._1wxfcta1s {
  --_1wxfcta15: var(--_1wxfcta10);
}
html.snqh4ez ._1wxfcta1t {
  --_1wxfcta15: var(--_1wxfcta11);
}
._1wxfcta1u {
  color: var(--_1wxfctay);
}
._1wxfcta1v {
  color: var(--_1wxfctaz);
}
._1wxfcta1w {
  color: var(--_1wxfcta10);
}
._1wxfcta1x {
  color: var(--_1wxfcta11);
}
._1wxfcta1y {
  color: var(--_1wxfcta12);
}
._1wxfcta1z {
  color: var(--_1wxfcta13);
}
._1wxfcta20 {
  color: var(--_1wxfcta14);
}
._1wxfcta21 {
  color: var(--_1wxfcta15);
}
._1wxfcta22 {
  color: var(--_1wxfcta16);
}
._1wxfcta23 {
  color: var(--_1wxfcta17);
}
._1wxfcta24 {
  padding-bottom: calc((var(--yf9sr18) - var(--yf9sr131)) / 2);
  padding-top: calc((var(--yf9sr18) - var(--yf9sr131)) / 2);
}
._1wxfcta25 {
  padding-bottom: calc((var(--yf9sr18) - var(--yf9sr13b)) / 2);
  padding-top: calc((var(--yf9sr18) - var(--yf9sr13b)) / 2);
}
._1wxfcta26 {
  padding-bottom: calc((var(--yf9sr18) - var(--yf9sr13l)) / 2);
  padding-top: calc((var(--yf9sr18) - var(--yf9sr13l)) / 2);
}
._1wxfcta27 {
  padding-bottom: calc((var(--yf9sr18) - var(--yf9sr13v)) / 2);
  padding-top: calc((var(--yf9sr18) - var(--yf9sr13v)) / 2);
}
@media screen and (min-width: 740px) {
  ._1wxfcta4 {
    --_1d0g9qk0: var(--yf9sr135);
    --_1d0g9qk1: var(--yf9sr136);
    --_1d0g9qk2: var(--yf9sr138);
    --_1d0g9qk3: var(--yf9sr139);
  }
  ._1wxfcta7 {
    --_1d0g9qk0: var(--yf9sr13f);
    --_1d0g9qk1: var(--yf9sr13g);
    --_1d0g9qk2: var(--yf9sr13i);
    --_1d0g9qk3: var(--yf9sr13j);
  }
  ._1wxfctaa {
    --_1d0g9qk0: var(--yf9sr13p);
    --_1d0g9qk1: var(--yf9sr13q);
    --_1d0g9qk2: var(--yf9sr13s);
    --_1d0g9qk3: var(--yf9sr13t);
  }
  ._1wxfctad {
    --_1d0g9qk0: var(--yf9sr13z);
    --_1d0g9qk1: var(--yf9sr140);
    --_1d0g9qk2: var(--yf9sr142);
    --_1d0g9qk3: var(--yf9sr143);
  }
  ._1wxfctag {
    font-size: var(--yf9sr135);
    line-height: var(--yf9sr136);
  }
  ._1wxfctah {
    font-size: var(--yf9sr13f);
    line-height: var(--yf9sr13g);
  }
  ._1wxfctai {
    font-size: var(--yf9sr13p);
    line-height: var(--yf9sr13q);
  }
  ._1wxfctaj {
    font-size: var(--yf9sr13z);
    line-height: var(--yf9sr140);
  }
  ._1wxfctam {
    --_1d0g9qk0: var(--yf9sr14c);
    --_1d0g9qk1: var(--yf9sr14d);
    --_1d0g9qk2: var(--yf9sr14f);
    --_1d0g9qk3: var(--yf9sr14g);
  }
  ._1wxfctap {
    --_1d0g9qk0: var(--yf9sr14m);
    --_1d0g9qk1: var(--yf9sr14n);
    --_1d0g9qk2: var(--yf9sr14p);
    --_1d0g9qk3: var(--yf9sr14q);
  }
  ._1wxfctas {
    --_1d0g9qk0: var(--yf9sr14w);
    --_1d0g9qk1: var(--yf9sr14x);
    --_1d0g9qk2: var(--yf9sr14z);
    --_1d0g9qk3: var(--yf9sr150);
  }
  ._1wxfctav {
    --_1d0g9qk0: var(--yf9sr156);
    --_1d0g9qk1: var(--yf9sr157);
    --_1d0g9qk2: var(--yf9sr159);
    --_1d0g9qk3: var(--yf9sr15a);
  }
  ._1wxfcta24 {
    padding-bottom: calc((var(--yf9sr18) - var(--yf9sr136)) / 2);
    padding-top: calc((var(--yf9sr18) - var(--yf9sr136)) / 2);
  }
  ._1wxfcta25 {
    padding-bottom: calc((var(--yf9sr18) - var(--yf9sr13g)) / 2);
    padding-top: calc((var(--yf9sr18) - var(--yf9sr13g)) / 2);
  }
  ._1wxfcta26 {
    padding-bottom: calc((var(--yf9sr18) - var(--yf9sr13q)) / 2);
    padding-top: calc((var(--yf9sr18) - var(--yf9sr13q)) / 2);
  }
  ._1wxfcta27 {
    padding-bottom: calc((var(--yf9sr18) - var(--yf9sr140)) / 2);
    padding-top: calc((var(--yf9sr18) - var(--yf9sr140)) / 2);
  }
}
.x2z54w6 {
  background: var(--x2z54w0);
}
.x2z54w7 {
  background: var(--x2z54w1);
}
.x2z54w8 {
  background: var(--x2z54w2);
}
.x2z54w9 {
  background: var(--x2z54w3);
}
.x2z54wa {
  background: var(--x2z54w4);
}
.x2z54wb {
  background: var(--x2z54w5);
}
html:not(.snqh4ez) .x2z54wc {
  --x2z54w0: var(--yf9sr1u);
  --x2z54w1: var(--yf9sr1n);
  --x2z54w2: var(--yf9sr1s);
  --x2z54w3: var(--yf9sr1f);
  --x2z54w4: var(--yf9sr1h);
  --x2z54w5: var(--yf9sr1l);
}
html:not(.snqh4ez) .x2z54wd {
  --x2z54w0: var(--yf9sr1v);
  --x2z54w1: var(--yf9sr1o);
  --x2z54w2: var(--yf9sr1t);
  --x2z54w3: var(--yf9sr1g);
  --x2z54w4: var(--yf9sr1i);
  --x2z54w5: var(--yf9sr1m);
}
html.snqh4ez .x2z54we {
  --x2z54w0: var(--yf9sr1u);
  --x2z54w1: var(--yf9sr1n);
  --x2z54w2: var(--yf9sr1s);
  --x2z54w3: var(--yf9sr1f);
  --x2z54w4: var(--yf9sr1h);
  --x2z54w5: var(--yf9sr1l);
}
html.snqh4ez .x2z54wf {
  --x2z54w0: var(--yf9sr1v);
  --x2z54w1: var(--yf9sr1o);
  --x2z54w2: var(--yf9sr1t);
  --x2z54w3: var(--yf9sr1g);
  --x2z54w4: var(--yf9sr1i);
  --x2z54w5: var(--yf9sr1m);
}
.x2z54wg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.x2z54wh {
  width: var(--yf9sr1c);
}
._1vb7ziq1 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.1
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script defer
            src="scripts[0]"
    >
    </script>
    <link href="styles[0]"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__snqh4ez,html.sprinkles_darkMode__snqh4ez body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__fkgxba0 typography_lightModeTone_light__1wxfcta18 typography_darkModeTone_dark__1wxfcta1b">
+        <div class="reset_base__54r4c40 sprinkles_paddingBottom_gutter_mobile__snqh4e76 sprinkles_paddingTop_gutter_mobile__snqh4e66 sprinkles_paddingLeft_gutter_mobile__snqh4e96 sprinkles_paddingRight_gutter_mobile__snqh4e86 sprinkles_position_relative_mobile__snqh4e5a typography_lightModeTone_light__1wxfcta18 typography_darkModeTone_dark__1wxfcta1b sprinkles_background_surface_lightMode__snqh4e32 sprinkles_background_surfaceDark_darkMode__snqh4e35">
+          <span class="reset_base__54r4c40 sprinkles_display_block_mobile__snqh4e4u typography_fontFamily__1wxfcta0 typography_fontWeight_regular__1wxfcta1 typography_tone_neutral__1wxfcta21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__1wxfctad">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
